[tool.poetry]
name = "pong_game"
version = "0.1.0"
description = ""
authors = ["Oliver"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pygame = {version = "^2.1.3.dev8", allow-prereleases = true}


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
